--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,9 @@ phases:
       nodejs: 18
     commands:
       - echo Installing dependencies...
-      - npm ci
+      - cd frontend
+      - npm install
+
   build:
     commands:
       - echo Building the React app...
@@ -15,10 +17,9 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: build
+  base-directory: frontend/build
   discard-paths: no
 
 cache:
   paths:
-    - node_modules/**/*
-
+    - frontend/node_modules/**/*
